feat: enhance Docker deployment experience and fix container accessibility
- Fix Docker 401 access issue: extend RemoteAccessSecurityFilter to support
  Docker bridge network IPs via ALLOW_PRIVATE_NETWORK env var
- Fix container log path: use LOG_DIR env var in log4j2.xml for Docker
- Enhance docker-entrypoint.sh: add pre-flight checks (API key validation,
  config summary, directory writable checks)
- Update docker-compose.yml: add grouped env var comments and Docker
  advanced configuration section
- Update .env.example: document ALLOW_PRIVATE_NETWORK, LOG_DIR,
  MCP_REGISTRY_PATH variables
- Update README.md/README_EN.md: add new env vars to config table,
  add Q9 Docker troubleshooting FAQ
- Fix frontend TS compilation and cleanup minor code issues